[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchout"
version = '0.0.1'
python_requires = ">=3.12"
dependencies = [
    'click',
    'watchfiles',
    'humanize',
    'prompt_toolkit',
]

[project.scripts]
wo = 'watchout.main:main'
watchout = 'watchout.main:main'
