[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchout"
version = '0.0.1'
python_requires = ">=3.12"
description = "Run your python scripts and compare the outputs"
authors = [
    {name = "Ryan Young", email = "dev@ryayoung.com"}
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ryayoung/watchout"
repository = "https://github.com/ryayoung/watchout"
documentation = "https://watchout.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    'click',
    'watchfiles',
    'humanize',
    'prompt_toolkit',
]

[project.scripts]
wo = 'watchout.main:main'
watchout = 'watchout.main:main'
